--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<p>Let's start by picking who goes first with a coin toss</p>
 
 		<h2>Coin Toss</h2>
+		<p id="heads">Heads</p>p>
+		<p id="tails">Tails</p>
 		<div class="cointoss">
 			<button onclick="flipCoin()">Flip!</button>
 		</div>
