--- a/index.html
+++ b/index.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="tttApp">
 
-<head>
-	<title>Tic-Tac-Toe Game</title>
-	<link rel="stylesheet" type="text/css" ref="ttt.css">
-	<script src="ttt.js"></script>
-</head>
+	<head>
+		<title>Tic-Tac-Toe Game</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script src="js/angular.min.js"></script>
+		<script src="js/app.js"></script>
+	</head>
 
-<body>
+	<body>
 
-	<h1>Tic-Tac-Toe!</h1>
+		<h1>Tic-Tac-Toe!</h1>
 
-		<p>Let's start by picking who goes first with a coin toss</p>
+	<!-- This is the coin toss -->
+			<p>Let's start by picking who goes first with a coin toss</p>
 
-		<h2>Coin Toss</h2>
-		<p id="heads">Heads</p>p>
-		<p id="tails">Tails</p>
-		<div class="cointoss">
-			<button onclick="flipCoin()">Flip!</button>
-		</div>
-
-
-	<!-- This is the Tic Tac Toe game board -->
-		<div class="game-board">
-			<div class="row1"> 	
-				<div id="box1">hello</div>
-				<div id="box2"></div>
-				<div id="box3"></div>
+			<h2>Coin Toss</h2>
+			<p id="heads">Heads</p>
+			<p id="tails">Tails</p>
+			<div class="cointoss">
+				<button onclick="flipCoin()">Flip!</button>
 			</div>
 
-			<div class="row2">
-				<div id="box4"></div>
-				<div id="box5"></div>
-				<div id="box6"></div>		
-			</div>
 
-			<div class="row3">
-				<div id="box7"></div>
-				<div id="box8"></div>
-				<div id="box9"></div>		
-			</div>
-		</div>
+		<!-- This is the Tic Tac Toe game board -->
+			<table class="game-board">
+				<tr class="boxes"> 	
+					<td id="box1"></td>
+					<td id="box2"></td>
+					<td id="box3"></td>
+				</tr>
 
-</body>
+				<tr class="boxes">
+					<tr id="box4"></tr>
+					<tr id="box5"></tr>
+					<tr id="box6"></tr>		
+				</tr>
+
+				<trclass="boxes">
+					<tr id="box7"></tr>
+					<tr id="box8"></tr>
+					<tr id="box9"></tr>		
+				</tr>
+			</table>
+
+	</body>
 </html>
