--- a/index.html
+++ b/index.html
@@ -16,32 +16,33 @@
 			<p>Let's start by picking who goes first with a coin toss</p>
 
 			<h2>Coin Toss</h2>
-			<p id="heads">Heads</p>
-			<p id="tails">Tails</p>
+			<p id="coin"></p>
 			<div class="cointoss">
-				<button onclick="flipCoin()">Flip!</button>
+				<button onclick="flipCoin()">Flip Coin!</button>
 			</div>
 
 
 		<!-- This is the Tic Tac Toe game board -->
-			<table class="game-board">
-				<tr class="boxes"> 	
+			<table class="game-board" ng-controller="TTTController">
+
+				<tr class="row1"> 	
 					<td id="box1"></td>
 					<td id="box2"></td>
 					<td id="box3"></td>
 				</tr>
 
-				<tr class="boxes">
-					<tr id="box4"></tr>
-					<tr id="box5"></tr>
-					<tr id="box6"></tr>		
+				<tr class="row2">
+					<td id="box4"></td>
+					<td id="box5"></td>
+					<td id="box6"></td>
 				</tr>
 
-				<trclass="boxes">
-					<tr id="box7"></tr>
-					<tr id="box8"></tr>
-					<tr id="box9"></tr>		
+				<tr class="row3">
+					<td id="box7"></td>
+					<td id="box8"></td>
+					<td id="box9"></td>		
 				</tr>
+
 			</table>
 
 	</body>
