--- a/index.html
+++ b/index.html
@@ -10,37 +10,54 @@
 
 	<body>
 
-		<h1>Tic-Tac-Toe!</h1>
+		<h1>Welcome to Tic-Tac-Toe!</h1>
 
 	<!-- This is the coin toss -->
-			<p>Let's start by picking who goes first with a coin toss</p>
+			<!-- <p>Let's start by picking who goes first with a coin toss</p>
 
 			<h2>Coin Toss</h2>
 			<p id="coin"></p>
 			<div class="cointoss">
-				<button onclick="flipCoin()">Flip Coin!</button>
+				<button ng-click="flipCoin">Flip Coin!</button>
+			</div> -->
+
+
+			<div class="rightScore">
+				<p>Player 1</p>
+
+<!-- 				Displays player 1 wins -->
+				<p></p>
+			</div>
+
+			<div class="leftScore">
+				<p>Player 2</p>
+
+<!-- Display player 2 wins -->
+				<p></p>
 			</div>
 
 
 		<!-- This is the Tic Tac Toe game board -->
 			<table class="game-board" ng-controller="TTTController">
 
+
+
 				<tr class="row1"> 	
-					<td id="box1"></td>
-					<td id="box2"></td>
-					<td id="box3"></td>
+					<td id="box1" ng-click="selectSquareOne()"></td>
+					<td id="box2" ng-click="selectSquareTwo()"></td>
+					<td id="box3" ng-click="selectSquareThree()"></td>
 				</tr>
 
 				<tr class="row2">
-					<td id="box4"></td>
-					<td id="box5"></td>
-					<td id="box6"></td>
+					<td id="box4" ng-click="selectSquareFour()"></td>
+					<td id="box5" ng-click="selectSquareFive()"></td>
+					<td id="box6" ng-click="selectSquareSix()"></td>
 				</tr>
 
 				<tr class="row3">
-					<td id="box7"></td>
-					<td id="box8"></td>
-					<td id="box9"></td>		
+					<td id="box7" ng-click="selectSquareSeven()"></td>
+					<td id="box8" ng-click="selectSquareEight()"></td>
+					<td id="box9" ng-click="selectSquareNine()"></td>		
 				</tr>
 
 			</table>
