added switch players on click

--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
 					</div>
 				</div>
 
-
 			<br>
 			<br>
 
-			<button id="reset-button">New Game</button>
+			<button id="reset-button" x-ng-click="resetGame">New Game</button>
 
 	</body>
 </html>
