added GameController.js file

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
 		<!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
 
-		<!-- JavaScript file -->
+		<!-- JavaScript files -->
 		<script src="js/main.js"></script>
+		<script src="js/GameController.js"></script>
+
 	</head>
 
-	<body ng-controller="GameController">
+	<body ng-controller="GameController as game">
 
 		<h1>Tic-Tac-Toe</h1>
 
