added vm for this

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 	<!-- Scoreboards -->
 	<div class="leftScore">
 		<h3>Player 1</h3>
-			<p>Score: {{2+2}}</p>
+			<p>Score: {{  }}</p>
 	</div>
 
 	<div class="rightScore">
 		<h3>Player 2</h3>
-			<p>Score: {{}}</p>
+			<p>Score: {{  }}</p>
 	</div>
 		
 
@@ -44,7 +44,7 @@
 		<!-- This is the Tic Tac Toe game board -->
 		<div id="game-board">
 			<div x-ng-repeat="row in game.grid">
-				<div class="squares" x-ng-repeat="cell in row" x-ng-class="game.currentMark" x-ng-click="game.selectSquare($parent.$index, $index)">hello
+				<div class="squares" x-ng-repeat="cell in row" x-ng-class="???" x-ng-click="game.selectSquare($parent.$index, $index)">hello
 				<!-- {{ $parent.$index }}-{{ $index }} -->
 					{{ game.grid[$parent.$index][$index].pick }}
 				</div>	
