added normalize css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Tic-Tac-Toe Game</title>
 
 		<!-- CSS Stylesheet -->
+		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<!-- Google Fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
@@ -53,6 +54,8 @@
 
 			<br>
 			<br>
+			<!-- This displays the result of the game -->
+			<p>{{}}</p>
 
 			<!-- 	reset game button -->
 			<button id="reset-button" x-ng-click="resetGame()">New Game</button>
