functional but need features

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 	<head>
 		<title>Tic-Tac-Toe Game</title>
+
 		<!-- CSS Stylesheet -->
+		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<!-- Google Fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
@@ -11,35 +13,39 @@
 		<!-- AngularJS -->
 		<script src="js/angular.min.js"></script>
 
-		<!-- JavaScript file -->
+		<!-- FireBase -->
+		<script src="https://cdn.firebase.com/js/client/2.0.6/firebase.js"></script>
+
+		<!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
+
+		<!-- JavaScript files -->
 		<script src="js/main.js"></script>
+		<script src="js/GameController.js"></script>
+
 	</head>
 
-	<body ng-controller="GameController">
+	<body ng-controller="GameController as game">
 
 		<h1>Tic-Tac-Toe</h1>
 
-<!-- Scoreboards -->
-			<div class="rightScore">
-				<h3>Player 2</h3>
+	<!-- Scoreboards -->
+	<div class="left-score">
+		<h3>DOGE</h3>
+			<p>Score: {{ game.leftScore }}</p>
+	</div>
 
-<!-- 	Displays player 1 wins -->
-				<p></p>
-			</div>
-
-			<div class="leftScore">
-				<h3>Player 1</h3>
-
-<!-- Display player 2 wins -->
-				<p></p>
-			</div>
+	<div class="right-score">
+		<h3>CAT</h3>
+			<p>Score: {{ game.rightScore }}</p>
+	</div>
+		
 
 
 		<!-- This is the Tic Tac Toe game board -->
 		<div id="game-board">
-			<div x-ng-repeat="row in grid">
-				<div class="squares" x-ng-repeat="cell in row" x-ng-click="selectSquare()">{{$parent.$index}}-{{$index}}
-				<span id="mark">{{cell.pick}}</span> 
+			<div x-ng-repeat="row in game.grid">
+				<div class="squares" x-ng-class="{'doge-img': game.grid[$parent.$index][$index].pick === 'x', 'cat-img': game.grid[$parent.$index][$index].pick === 'o'}" x-ng-repeat="cell in row" x-ng-click="game.selectSquare($parent.$index, $index)">
 				</div>	
 			</div>
 		</div>
@@ -47,7 +53,15 @@
 			<br>
 			<br>
 
-			<button id="reset-button" x-ng-click="resetGame()">New Game</button>
+			<!-- This displays the result of the game -->
+			<p id="game-result">{{ game.gameResult }}</p>
+
+			<span class="buttons">
+				<!-- 	Reset Game Button -->
+				<button x-ng-click="game.resetGame()">New Game</button>
+				<!-- Clear Scoreboard -->
+				<button x-ng-click="game.clearStore()">Clear Score</button>
+			</span>
 
 	</body>
 </html>
