fixed css styling

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<body ng-controller="GameController as game">
 
-		<h1>&iquest&iquest Tic-CAT-DoGE ??</h1>
+		<h1>&iquest&iquest TIC-TAC-DOGE ??</h1>
 
 	<!-- Scoreboards -->
 		<div class="left-score">
